Not returning domains with deleted set to true. Added tests